We've added a class library to be used by our API in order to manipulate sql db / user's table. Also adds logic to save and load data in a generic form. Stabilishes a way to access data to be used by our front-end clients through API.

--- a/RMDataManager/Web.config
+++ b/RMDataManager/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-RMDataManager-20200221024452.mdf;Initial Catalog=aspnet-RMDataManager-20200221024452;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="RMData" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=RMData;Integrated Security=True;"/>
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
